--- a/63c902c15f598f29a9a37d4c/notice.html
+++ b/63c902c15f598f29a9a37d4c/notice.html
@@ -1,8 +1,10 @@
 <div class='notice'><h1>p</h1>
-<span class='version'>Notice version : 2.4</span><span class='publishedDate'>Published Date : </span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
+<span class='version'>Notice version : 2.5</span><span class='publishedDate'>Published Date : 2023-01-19</span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p></p>
 <p>We use Your Personal data for the following purposes :</p>
-<p></p>
+<p><ol>
+<li>This is Purpose 1 for the app and that is final</li>
+</ol></p>
 <p></p>
 <p>By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p></div>
 <p><b>PII Controller</b></p>
