--- a/63fffacc4066cb24934fc03c/notice.html
+++ b/63fffacc4066cb24934fc03c/notice.html
@@ -1,5 +1,5 @@
 <div class='notice'><h1>new name for notice</h1>
-<span class='version'>Notice version : 9.0</span><span class='publishedDate'>Published Date : </span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
+<span class='version'>Notice version : 10.0</span><span class='publishedDate'>Published Date : </span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p></p>
 <p>We use Your Personal data for the following purposes :</p>
 <p></p>
@@ -11,15 +11,21 @@
 <p><b>Personal Data Collection</b></p>
 <p></p>
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
-<p></p>
+<p><ul>
+<li>Name - Identification</li>
+</ul></p>
 <p></p>
 <p><b>PII Collection Method</b></p>
 <p>We use the following ways to collect PII information:</p>
-<p></p>
+<p><ul>
+<li>Email</li>
+</ul></p>
 <p></p>
 <p><b>PII collection timing and Location</b></p>
 <p>While using our services or app, PII is collected when :</p>
-<p></p>
+<p><ul>
+<li>Communication</li>
+</ul></p>
 <p></p>
 <p><b>Basis</b></p>
 <p>The following are the basis for which we collect and process PII data. </p>
