--- a/64059e3c32f64280ab41e2ea/notice.html
+++ b/64059e3c32f64280ab41e2ea/notice.html
@@ -1,8 +1,10 @@
 <div class='notice'><h1>p2 notice</h1>
-<span class='version'>Notice version : 1.0</span><span class='publishedDate'>Published Date : 2023-03-06</span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
+<span class='version'>Notice version : 2.0</span><span class='publishedDate'>Published Date : 2023-03-06</span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p></p>
 <p>We use Your Personal data for the following purposes :</p>
-<p></p>
+<p><ol>
+<li>To send you the menu items you ordered to you.</li>
+</ol></p>
 <p></p>
 <p>By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p></div>
 <p><b>PII Controller</b></p>
@@ -13,24 +15,27 @@
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
 <p><ul>
 <li>Name - purpose 1</li>
+<li>Email - Notification communication</li>
 </ul></p>
 <p></p>
 <p><b>PII Collection Method</b></p>
 <p>We use the following ways to collect PII information:</p>
 <p><ul>
 <li>form</li>
+<li>Form</li>
 </ul></p>
 <p></p>
 <p><b>PII collection timing and Location</b></p>
 <p>While using our services or app, PII is collected when :</p>
 <p><ul>
 <li>when using app</li>
+<li>when using app during signup</li>
 </ul></p>
 <p></p>
 <p><b>Basis</b></p>
 <p>The following are the basis for which we collect and process PII data. </p>
 <p><ul>
-<li>Performance of Contract - Name</li>
+<li>Performance of Contract - Name,Email</li>
 <li>Legal Requirement - Name</li>
 </ul></p>
 <p></p>
