--- a/641c9d0a5741cf0f6f4b490a/notice.html
+++ b/641c9d0a5741cf0f6f4b490a/notice.html
@@ -8,6 +8,8 @@
 <p><b>PII Controller</b></p>
 <p>The PII controller for your PII information is</p>
 <p><br/></p>
+<p>I made some changes here</p>
+<p></p>
 <p><b>Personal Data Collection</b></p>
 <p></p>
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
