Reviewed Notice version 1.0

--- a/641c9d0a5741cf0f6f4b490a/notice.html
+++ b/641c9d0a5741cf0f6f4b490a/notice.html
@@ -12,6 +12,9 @@
 <p></p>
 <p>I suggested alternative</p>
 <p></p>
+<p></p>
+<p>No this is better</p>
+<p></p>
 <p><b>Personal Data Collection</b></p>
 <p></p>
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
