--- a/641c9d0a5741cf0f6f4b490a/notice.html
+++ b/641c9d0a5741cf0f6f4b490a/notice.html
@@ -7,6 +7,8 @@
 <p>By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p></div>
 <p>Made some changes here</p>
 <p></p>
+<p>Maybe you should change to this</p>
+<p></p>
 <p><b>PII Controller</b></p>
 <p>The PII controller for your PII information is</p>
 <p><br/></p>
