--- a/641c9d0a5741cf0f6f4b490a/notice.html
+++ b/641c9d0a5741cf0f6f4b490a/notice.html
@@ -1,5 +1,5 @@
 <div class='notice'><h1>New ExCo Food Privacy Notice</h1>
-<span class='version'>Notice version : 1.5</span><span class='publishedDate'>Published Date : </span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
+<span class='version'>Notice version : 1.6</span><span class='publishedDate'>Published Date : </span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p></p>
 <p>We use Your Personal data for the following purposes :</p>
 <p></p>
@@ -12,6 +12,8 @@
 <p><b>PII Controller</b></p>
 <p>The PII controller for your PII information is</p>
 <p><br/></p>
+<p>Added some stuff</p>
+<p></p>
 <p>Suggest some changes here</p>
 <p></p>
 <p></p>
