--- a/641c9d0a5741cf0f6f4b490a/notice.html
+++ b/641c9d0a5741cf0f6f4b490a/notice.html
@@ -14,6 +14,8 @@
 <p><br/></p>
 <p>Added some stuff</p>
 <p></p>
+<p>Added new stuff</p>
+<p></p>
 <p>Suggest some changes here</p>
 <p></p>
 <p></p>
