--- a/641c9d0a5741cf0f6f4b490a/notice.html
+++ b/641c9d0a5741cf0f6f4b490a/notice.html
@@ -5,6 +5,8 @@
 <p></p>
 <p>CHanged a lot more stuff</p>
 <p></p>
+<p>bkahblah</p>
+<p></p>
 <p>Made some  more suggestions</p>
 <p></p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
