--- a/6434ab8fc8a6ff0faac0a435/notice.html
+++ b/6434ab8fc8a6ff0faac0a435/notice.html
@@ -12,6 +12,8 @@
 <p>Controller ABC<br/>
 <br/>
 123 Main St.<br/></p>
+<p></p>
+<p>I made some changes</p>
 <p><b>Personal Data Collection</b></p>
 <p></p>
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
