--- a/6440474a09439e6dec87fd2e/notice.html
+++ b/6440474a09439e6dec87fd2e/notice.html
@@ -1,5 +1,5 @@
 <div class='notice'><h1>ExCo Food Privacy Notice</h1>
-<span class='version'>Notice version : 1.0</span><span class='publishedDate'>Published Date : 2023-04-18</span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
+<span class='version'>Notice version : 2.0</span><span class='publishedDate'>Published Date : 2023-04-18</span><p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p></p>
 <p>We use Your Personal data for the following purposes :</p>
 <p></p>
@@ -13,11 +13,13 @@
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
 <p><ul>
 <li>Name - Identification</li>
+<li>Email - Communication</li>
 </ul></p>
 <p></p>
 <p><b>PII Collection Method</b></p>
 <p>We use the following ways to collect PII information:</p>
 <p><ul>
+<li>Form</li>
 <li>Form</li>
 </ul></p>
 <p></p>
@@ -25,12 +27,13 @@
 <p>While using our services or app, PII is collected when :</p>
 <p><ul>
 <li>when using app</li>
+<li>when using app</li>
 </ul></p>
 <p></p>
 <p><b>Basis</b></p>
 <p>The following are the basis for which we collect and process PII data. </p>
 <p><ul>
-<li>Performance of Contract - Name</li>
+<li>Performance of Contract - Name,Email</li>
 <li>Legal Requirement - </li>
 </ul></p>
 <p></p>
