--- a/6440474a09439e6dec87fd2e/notice.html
+++ b/6440474a09439e6dec87fd2e/notice.html
@@ -48,7 +48,9 @@
 <p>The Company will take all steps reasonably necessary to ensure that Your data is treated securely and in accordance with this Privacy Policy and no transfer of Your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of Your data and other personal information.</p>
 <p></p>
 <p>Your data will be stored at the following locations :</p>
-<p></p>
+<p><ul>
+<li>Las Vegas, Nevada</li>
+</ul></p>
 <p></p>
 <p>and will be subject to the rules and regulations of the following jurisdictions:</p>
 <p></p>
@@ -62,7 +64,7 @@
 <p>We use third-party Service Providers to provide better improvement of our Service.</p>
 <p><pre><table>
             <tr><td>Third Party</td><td>&nbsp;&nbsp;&nbsp;</td><td>Purpose</td></tr>
-            
+            <tr><td>ThirdParty Co</td><td></td><td>Delivery Outsourcing</td></tr>
             </table></pre></p>
 <p></p>
 <p><b>Disclosure of Your Personal Data  </b></p>
